Minor z-index fix and text under nav icon

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 10;
+    z-index: 11;
     top: 0px;
     background-color: rgba(0, 0, 0, 0.54);
 }
@@ -79,7 +79,7 @@ body {
 .modal {
     position: relative;
     margin: 0 auto;
-    z-index: 10;
+    z-index: 12;
     padding: 10px;
     background-color: gray;
     top: 90px;
@@ -139,6 +139,17 @@ body {
     z-index: 5;
     margin: 30px;
     width: fit-content;
+}
+
+#show-directions-container > span {
+    color: white;
+    padding-left: 7px;
+    /* Text outline in black*/
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
 }
 
 .legend-info {
